--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,8 @@ spring:
       max-file-size: 100MB
       max-request-size: 100MB
 #  sql.init.mode: always
+  messages:
+    basename: errors
 
   security:
     oauth2:
@@ -34,3 +36,4 @@ spring:
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
+
