--- a/delivery-market-admin/src/main/resources/application.yml
+++ b/delivery-market-admin/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
   jpa:
     open-in-view: false
     defer-datasource-initialization: true
-    hibernate.ddl-auto: update
+    hibernate.ddl-auto: none
     show-sql: true
     properties:
       hibernate.format_sql: true
@@ -28,26 +28,9 @@ spring:
     multipart:
       max-file-size: 100MB
       max-request-size: 100MB
-#  sql.init.mode: always
   messages:
     basename: errors
 
-  security:
-    oauth2:
-      client:
-        registration:
-          kakao:
-            client-id: ${KAKAO_OAUTH_CLIENT_ID}
-            client-secret: ${KAKAO_OAUTH_CLIENT_SECRET}
-            authorization-grant-type: authorization_code
-            redirect-uri: "{baseUrl}/login/oauth2/code/kakao"
-            client-authentication-method: POST
-        provider:
-          kakao:
-            authorization-uri: https://kauth.kakao.com/oauth/authorize
-            token-uri: https://kauth.kakao.com/oauth/token
-            user-info-uri: https://kapi.kakao.com/v2/user/me
-            user-name-attribute: id
   mail:
     host: smtp.naver.com
     port: 465
