feat: 카테고리 조회 API 관리자 서버와 연결

--- a/delivery-market/src/main/resources/application.yml
+++ b/delivery-market/src/main/resources/application.yml
@@ -1,11 +1,7 @@
 logging:
   level:
     org:
-      hibernate:
-        SQL: DEBUG
-        type:
-          descriptor:
-            sql: TRACE
+      web.client.restTemplate: debug
 spring:
   datasource:
     url: ${DB_URL}
